--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 body
 {
     background-color: rgb(4, 2, 23);
-    perspective: 600;
+    perspective: 600px;
 }
 .container
 {
@@ -106,6 +106,7 @@ body
     width: 100%;
     height: 100vh;
     z-index: 100;
+    perspective: 100px;
 }
 .backg
 {
@@ -118,8 +119,10 @@ body
     width: 380px;
     height: 240px;
     position: relative;
-    transition: transform 0.5s;
+    transform-origin: right center;
+    transition: transform 1s;
     transform-style: preserve-3d;
+    perspective: 500px;
 }
 .home .card, .card-back
 {
@@ -143,7 +146,7 @@ body
 }
 .cardholder:hover
 {
-    transform: rotateY(180deg)
+    transform: rotateY(180deg) translateX(100%);
 }
 .cardsim
 {
@@ -205,7 +208,7 @@ body
 }
 .backdetails .line
 {
-    top: 120px;
+    top: 140px;
     position: absolute;
     width: 100%;
     height: 50px;
@@ -221,16 +224,40 @@ body
     width: 40%;
     height: 30px;
     background: #fff;
-    margin: 20px;
+    margin: 48px 20px;
     color: #000;
     position: absolute;
 }
-.cvv p
+.cvv > p
+{
+    position: absolute;
+    font-size: 7px;
+    color: #fff;
+    top: -16px;
+}
+.cvv .cvp
 {
     position: absolute;
     right: 12px;
     top: 7px;
     font-weight: 700;
+}
+.btype
+{
+    font-size: 20px;
+    font-weight: 600;
+    position: absolute;
+    top: 80px;
+    right: 20px;
+}
+.auth
+{
+    font-size: 8px;
+    left: 20px;
+    color: #fff;
+    position: absolute;
+    top: 125px;
+    font-weight: 600;
 }
 /* /////////////// effects //////////// */
 .effects
