--- a/css/style.css
+++ b/css/style.css
@@ -317,3 +317,62 @@ position: relative;
 {
     font-size: 25px;
 }
+/* ///////////END OF HOME///////////// */
+.ndsec 
+{
+    color: white;
+    padding: 35px 0px 0px 0px;
+}
+.ndsec .nd-sec-text
+{
+    width: 40%;
+    float: left;
+    margin: 0px 12% 0px 0px;
+}
+.ndsec .nd-sec-text h2
+{
+    font-size: 35px;
+}
+.ndsec .nd-sec-text p
+{
+    font-size: 25px;
+}
+.ndsec .card-types
+{
+    position: relative;
+}
+.ndsec img
+{
+    /* transform: matrix(1, 1, .3, 1, 0, 0);  */
+    transform: matrix(0.7,-0.9,0.99,0.43,0,0);
+    /* -ms-transform: matrix(0.71,0.71,-0.28,1.13,0,0); */
+    /* -webkit-transform: matrix(0.71,0.71,-0.28,1.13,0,0); */
+    width: 290px;
+    position: absolute;
+    border-radius: 20px;
+}
+.ndsec .img1 {
+    transform: matrix(0.7,-0.9,0.99,0.43,0,0);
+    z-index: 100;
+}
+.ndsec .img2 {
+    transform: matrix(0.7,-0.9,0.99,0.43,40,0);
+    z-index: 99;
+}
+.ndsec .img3 {
+    transform: matrix(0.7,-0.9,0.99,0.43,80,0);
+    z-index: 98;
+}
+.ndsec .img4 {
+    transform: matrix(0.7,-0.9,0.99,0.43,120,0);
+    z-index: 97;
+}
+.ndsec .img1:hover,
+.ndsec .img2:hover,
+.ndsec .img3:hover,
+.ndsec .img4:hover
+{
+    transform: matrix(0.8,-0.9,0.99,0.43,153,-85);
+    z-index: 101;
+}
+
