--- a/css/style.css
+++ b/css/style.css
@@ -497,9 +497,10 @@ position: relative;
     top: 50%;
     transform: translate(-50%, -50%);
     animation-name: app;
-    animation-duration: 4s;
+    animation-duration: 3s;
     border-radius: 32px;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 3;
+    animation-fill-mode: forwards;
 }
 @keyframes app {
     0%
@@ -512,15 +513,27 @@ position: relative;
         width: 40px;
         height: 40px;
     }
-    100%
+    80%
+    {
+        opacity: 1;
+    }
+    97%
     {
         width: 100%;
         height: 100%;
+        opacity: 0;
+    }
+    100%
+    {
+        opacity: 0;
     }
 }
 /* in mob screen */
 .inmob
 {
+    position: absolute;
+    top: 60px;
+    opacity: 0;
     width: 90%;
     height: 37%;
     background: #000;
@@ -529,6 +542,32 @@ position: relative;
     margin: 15px;
     border-radius: 15px;
     animation-name: app-card;
+    animation-duration: 3s;
+    animation-delay: 3s;
+    animation-timing-function: ease-out;
+    animation-iteration-count: 3;
+    animation-fill-mode: forwards;
+}
+@keyframes app-card {
+    0%
+    {
+        opacity: 0;
+        
+    }
+    /* 10% 
+    {
+        opacity: 1;
+    } */
+    40%
+    {
+        opacity: 1;
+        top: 25px;
+    }
+    100%
+    {
+        opacity: 1;
+        top: 25px;
+    }
 }
 .visa-logo2 img
 {
@@ -556,9 +595,35 @@ position: relative;
 {
     position: absolute;
     width: 88%;
-    top: 250px;
+    top: 290px;
     left: 20px;
+    opacity: 0;
     animation-name: app-details;
+    animation-duration: 3s;
+    animation-delay: 3.2s;
+    animation-iteration-count: 3;
+    animation-timing-function: ease-out;
+    animation-iteration-count: 3;
+    animation-fill-mode: forwards;
+}
+@keyframes app-details {
+    0%
+    {
+        opacity: 0;
+    }
+    20%
+    {
+        opacity: 1;
+    }
+    50%
+    {
+        top: 250px;
+    }
+    100%
+    {
+        top: 250px;
+        opacity: 1;
+    }
 }
 .app-details h3 , .P2
 {
