--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,23 @@ position: relative;
 {
     position: relative;
     color: rgb(183, 183, 183);
-    padding: 50px 0px
+    padding: 50px 0px;
+}
+
+.cf-content {
+    display: grid;
+    grid-template-columns: repeat(3 , 30%);
+    grid-auto-rows: minmax(100px , auto);
+    gap: 6% 5%;
+}
+.ita1
+{
+    grid-column: 2 / 4;
+}
+.ita1 p
+{
+    /* min-height: 75px; */
+    padding: 0rem 0 2.5rem;
 }
 .cf-parent h2
 {
@@ -407,43 +423,24 @@ position: relative;
 }
 .cf-parent .item
 {
-    width: 30%;
-    float: left;
-    /* height: 80px; */
+    width: 100%;
     background: linear-gradient(to right bottom, #ff00007a 20%, rgba(0, 0, 0, 0.379) 50%);
     padding: 20px;
     border: 1px solid;
     border-radius: 20px;
-    margin: 1.5%;
     animation-name: card1;
     position: relative;
     overflow: hidden;
-}
-.cf-parent .ita::after , .itb::after
-{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    opacity: 1;
-    z-index: -1;
     transition: .4s;
-    background: linear-gradient(to left bottom, #ff00007a 20%, rgba(0, 0, 0, 0.379) 50%);
 }
-.cf-parent .itb::after
+.cf-parent .item:hover
 {
-    opacity: 1;
-    background: linear-gradient(to right top, #ff00007a 20%, rgba(0, 0, 0, 0.379) 50%);
-}
-.cf-parent .item:hover.itb::after
-{
-    opacity: 0;
+    background: linear-gradient(to right bottom, #ff0000b9 20%, rgba(0, 0, 0, 0.379) 50%);    
 }
 .item a
 {
     color: #fff;
+    margin: 0.9rem 0;
     font-size: 13px;
     padding: 3px 10px;
     display: block;
