--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body
     height: 60px;
     padding: 0px 10%;
     top: 0px;
-    background-color: #000000c4;
+    background-color: #000000d0;
     z-index: 110;
 }
 .logo
@@ -504,7 +504,7 @@ position: relative;
     animation-duration: 3s;
     /* animation-delay: 1s; */
     border-radius: 32px;
-    animation-iteration-count: 3;
+    animation-iteration-count: 4;
     animation-fill-mode: forwards;
 }
 @keyframes app {
@@ -554,7 +554,7 @@ position: relative;
     animation-duration: 3s;
     animation-delay: 11s;
     animation-timing-function: ease-out;
-    animation-iteration-count: 3;
+    animation-iteration-count: 4;
     animation-fill-mode: forwards;
 }
 @keyframes app-card {
@@ -610,7 +610,7 @@ position: relative;
     animation-name: app-details;
     animation-duration: 3s;
     animation-delay: 11.2s;
-    animation-iteration-count: 3;
+    animation-iteration-count: 4;
     animation-timing-function: ease-out;
     animation-fill-mode: forwards;
 }
@@ -1130,6 +1130,7 @@ figure [alt="updates(v)"]
     color: rgb(224, 224, 224);
     background: #141414;
     margin-top: 10rem;
+    padding-top: 1rem;
 }
 .footer-main {
     display: flex;
